Added some generics and removed usages of deprecated methods